--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@testing-library/react-native": "^7.0.2",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^25.1.0",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "^6.5.1",
     "husky": "^4.3.0",
     "jest": "^25.1.0",
@@ -45,6 +47,11 @@
     "hooks": {
       "pre-commit": "yarn lint",
       "pre-push": "npm test"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
     }
   }
 }
