--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-jest": "^25.1.0",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^6.5.1",
+    "fetch-mock": "^9.10.7",
     "husky": "^4.3.0",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
